--- a/_layouts/dark.html
+++ b/_layouts/dark.html
@@ -126,6 +126,10 @@
       <div class="footer-text">
         <a href="#top">Back to Top</a>
       </div>
+      <div class="neutrality-mobile"><img src="/assets/images/save-net-neutrality.png">
+        <a href="https://www.battleforthenet.com/">battleforthenet.com</a><br>  
+        <a href="https://www.savetheinternet.com/net-neutrality">savetheinternet.com/net-neutrality</a>
+      </div>
     </div>
 </section>
 </div>
