--- a/_sass/style-dark.scss
+++ b/_sass/style-dark.scss
@@ -617,6 +617,10 @@ header {
   position:fixed;
 }
 
+.neutrality-mobile {
+	display:none;
+}
+
 .neutrality img {
   padding-bottom:10px;
   display:block;
@@ -795,7 +799,6 @@ hr.style-one {
 /* footer */
 
 .footer {
-  height:100px;
   bottom:25px;
   text-align:center !important;
   padding:0 0 20px 0;
@@ -1020,6 +1023,33 @@ input.search-button:hover[type="submit"] {
 		display:none;
 		visibility:hidden;
 	}
+
+.neutrality-mobile {
+ line-height:1;
+ border:1px solid inherit;
+padding:20px 0 20px 0;
+margin-top:20px;
+margin-left:auto;
+margin-right:auto;
+  width:210px;
+ height:302px;
+display:block;
+background-color:#121212;
+border-radius:7px 7px 7px 7px;
+}
+
+.neutrality-mobile img {
+  padding-bottom:10px;
+  display:block;
+  margin:0 auto;
+}
+
+.neutrality-mobile a {
+	font-size:12px;
+  margin-left:10px;
+  color:#4f8eab;
+  float:left;
+}
 
   h1 {
     margin:30px 0 20px 0;
