--- a/_sass/style-search.scss
+++ b/_sass/style-search.scss
@@ -300,6 +300,8 @@ section > p:before {
   background:rgba(0, 0, 0, 0) -webkit-linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
 	background:rgba(0, 0, 0, 0) -o-linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
   background:rgba(0, 0, 0, 0) linear-gradient(to bottom , rgb(103, 0, 0) 17%, rgb(128, 0, 0) 51%, rgb(143, 0, 0) 100%) no-repeat scroll 0 0;
+  border-bottom:1px solid rgba(0, 0, 0, 0.6);
+  border-top:1px solid rgba(0, 0, 0, 0.6);
   color:#ffffff;
 }
 
@@ -309,6 +311,7 @@ section > p:before {
   background:rgb(60, 64, 66) -webkit-linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
 	background:rgb(60, 64, 66) -o-linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
   background:rgb(60, 64, 66) linear-gradient(to bottom , rgb(150, 157, 157) 7%, rgb(117, 122, 122) 57%, rgb(96, 102, 102) 78%) repeat scroll 0 0;
+  border:1px solid rgba(0, 0, 0, 0.5);
   border-radius:0 0 10px 10px;
     -webkit-border-radius:0 0 10px 10px;
   box-shadow: inset 0 0 15px 0 rgba(0,0,0,0.4);
@@ -338,7 +341,10 @@ section > p:before {
 
 #nav li ul a {
   background:rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border-width:0;
+    border-color:transparent currentColor;
+	  border-image:none;
+	  border-style:none;
+	  border-width:1px;
   box-shadow:none;
   margin-right:0;
   width:210px;
